<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ledos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="led_1">LED 1</string>
    <string name="led_2">LED 2</string>
    <string name="led_3">LED 3</string>
    <string name="led_4">LED 4</string>
    
    <string name="botonOpen">Open</string>
    <string name="botonSend">Send</string>
    <string name="botonClose">Close</string>
    <string name="botonPress2">Press 5</string>
    <string name="botonAll">TODOS</string>
    <string name="label">hola</string>
    <string name="entry"></string>
    
    
    
    

</resources>
