<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ledos.MainActivity$PlaceholderFragment" >

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:text="@string/led_1" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/switch1"
        android:layout_below="@+id/switch1"
        android:layout_marginTop="24dp"
        android:text="@string/led_2" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/switch2"
        android:layout_below="@+id/switch2"
        android:layout_marginTop="24dp"
        android:text="@string/led_3" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/switch3"
        android:layout_below="@+id/switch3"
        android:layout_marginTop="30dp"
        android:text="@string/led_4" />

    <Button
        android:id="@+id/BtnOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/switch4"
        android:layout_below="@+id/switch4"
        android:layout_marginTop="40dp"
        android:text="@string/botonOpen" />

    <Button
        android:id="@+id/BtnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/BtnOpen"
        android:layout_alignBottom="@+id/BtnOpen"
        android:layout_alignParentRight="true"
        android:layout_marginRight="19dp"
        android:text="@string/botonClose" />

    <Button
        android:id="@+id/BtnPress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BtnOpen"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="27dp"
        android:text="@string/botonPress2" />

    <Button
        android:id="@+id/BtnAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/BtnPress"
        android:layout_alignBottom="@+id/BtnPress"
        android:layout_centerHorizontal="true"
        android:text="@string/botonAll" />

    <TextView
        android:id="@+id/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/switch1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/label" />

</RelativeLayout>